# Practica3MH

./: CMakeLists.txt
Entrega/software/: CMakeLists.txt
Entrega/software/comun/: Solution.cpp  Solution_enteros.cpp  Solution_enteros.h  bl.cpp  bl.h
Entrega/software/resultados/: AGE-posicion.csv  Tabla Completa.xlsx  Tabla Práctica 2.xlsx
Entrega/software/src/: AGE-posicion.cpp  AGG-posicion.cpp  AGG-uniforme.cpp  pruebas.cpp
comun/: Solution.h
resultados/: AGE-uniforme.csv  AGG-posicion.csv  AGG-uniforme.csv  AM-10-0.1.csv  AM-10-0.1mej.csv  AM-10-1.csv  BMB.csv  ES.csv  Exportar.csv  ILS-ES.csv  ILS.csv  Tabla Completa.xlsx
src/: AGE-uniforme.cpp  AM-10-0.1.cpp  AM-10-0.1mej.cpp  AM-10-1.cpp  ES.cpp  ILS-ES.cpp  ILS.cpp
